Fix alignment and styling in your profits block

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -555,6 +555,10 @@ p {
     align-items: center;
 }
 
+.align-start {
+    align-items: flex-start;
+}
+
 .justify-between {
     justify-content: space-between;
 }
@@ -599,6 +603,13 @@ p {
 .flex-column {
     flex-direction: column;
 }
+
+@media only screen and (max-width: 1330px) {
+
+    .d-tablet-flex-column {
+        flex-direction: column;
+    }
+}   
 
 .nowrap {
     white-space: nowrap;
@@ -730,9 +741,7 @@ p {
             padding: 44px 40px;
 
             .profits-tab {
-                position: absolute;
-                bottom: 40px;
-                left: 40px;
+                margin-top: 40px;
             }
         }
 
