--- a/src/scss/_margins.scss
+++ b/src/scss/_margins.scss
@@ -81,3 +81,7 @@
 .mr-12 {
   margin-right: 12px;
 }
+
+.mr-60 {
+  margin-right: 60px;
+}
